--- a/01-prepare/01-prepare.ipynb
+++ b/01-prepare/01-prepare.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "53d90638-0932-49cc-9188-94b97da980d7",
    "metadata": {
     "tags": []
@@ -43,6 +43,7 @@
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
+    "from itertools import chain\n",
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "import transformers \n",
@@ -50,6 +51,18 @@
     "import logging\n",
     "import pandas\n",
     "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ed5b603f-225d-42c5-8c30-a16194f5d2f2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_colwidth', None)"
    ]
   },
   {
@@ -62,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0d2e9ab5-4d0e-4d52-a75b-b6876a1439d1",
    "metadata": {},
    "outputs": [],
@@ -82,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "49483a10-6df3-4f46-b555-4068edadb2ea",
    "metadata": {},
    "outputs": [
@@ -114,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "97cd90cf-a011-4788-aa08-98f3c6426ea9",
    "metadata": {},
    "outputs": [
@@ -122,12 +135,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading (…)okenizer_config.json: 100%|██████████| 619/619 [00:00<00:00, 88.4kB/s]\n",
-      "Downloading (…)olve/main/vocab.json: 100%|██████████| 798k/798k [00:00<00:00, 96.2MB/s]\n",
-      "Downloading (…)olve/main/merges.txt: 100%|██████████| 456k/456k [00:00<00:00, 77.0MB/s]\n",
-      "Downloading (…)/main/tokenizer.json: 100%|██████████| 1.37M/1.37M [00:00<00:00, 158MB/s]\n",
-      "Downloading (…)in/added_tokens.json: 100%|██████████| 4.04k/4.04k [00:00<00:00, 1.61MB/s]\n",
-      "Downloading (…)cial_tokens_map.json: 100%|██████████| 357/357 [00:00<00:00, 165kB/s]\n",
       "GPT2TokenizerFast(name_or_path='EleutherAI/gpt-j-6B', vocab_size=50257, model_max_length=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True)})\n"
      ]
     }
@@ -139,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d0c24194-1d85-4d1f-8286-144079f4337f",
    "metadata": {},
    "outputs": [
@@ -149,7 +156,7 @@
        "50400"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b35fb4b1-6c0b-4d73-ba34-ecfcfed24811",
    "metadata": {
     "tags": []
@@ -184,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ad1e7301-cc2f-48e1-b452-10b1d03ccddb",
    "metadata": {
     "tags": []
@@ -196,7 +203,7 @@
        "50405"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3d248514-d058-4675-9daf-f4f8b7440c7b",
    "metadata": {
     "tags": []
@@ -228,25 +235,499 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8db44947-b184-4ee0-8cde-af14270c8f78",
+   "cell_type": "markdown",
+   "id": "bb19e327-e72f-46ee-8e83-703779b05bb4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Load dialogues dataset"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "67d17ef6-2db9-460e-ae57-61f7dbe6c010",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dialogue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Can we make this quick?  Roxanne Korrine and Andrew Barrett are having an incredibly horrendous public break- up on the quad.  Again.&lt;&gt;Well, I thought we'd start with pronunciation, if that's okay with you.&lt;&gt;Not the hacking and gagging and spitting part.  Please.&lt;&gt;Okay... then how 'bout we try out some French cuisine.  Saturday?  Night?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>You're asking me out.  That's so cute. What's your name again?&lt;&gt;Forget it.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>No, no, it's my fault -- we didn't have a proper introduction ---&lt;&gt;Cameron.&lt;&gt;The thing is, Cameron -- I'm at the mercy of a particularly hideous breed of loser.  My sister.  I can't date until she does.&lt;&gt;Seems like she could get a date easy enough...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Why?&lt;&gt;Unsolved mystery.  She used to be really popular when she started high school, then it was just like she got sick of it or something.&lt;&gt;That's a shame.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gosh, if only we could find Kat a boyfriend...&lt;&gt;Let me see what I can do.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                                                                                                                                                                             dialogue\n",
+       "0  Can we make this quick?  Roxanne Korrine and Andrew Barrett are having an incredibly horrendous public break- up on the quad.  Again.<>Well, I thought we'd start with pronunciation, if that's okay with you.<>Not the hacking and gagging and spitting part.  Please.<>Okay... then how 'bout we try out some French cuisine.  Saturday?  Night?\n",
+       "1                                                                                                                                                                                                                                                                          You're asking me out.  That's so cute. What's your name again?<>Forget it.\n",
+       "2                                                                                          No, no, it's my fault -- we didn't have a proper introduction ---<>Cameron.<>The thing is, Cameron -- I'm at the mercy of a particularly hideous breed of loser.  My sister.  I can't date until she does.<>Seems like she could get a date easy enough...\n",
+       "3                                                                                                                                                                                        Why?<>Unsolved mystery.  She used to be really popular when she started high school, then it was just like she got sick of it or something.<>That's a shame.\n",
+       "4                                                                                                                                                                                                                                                                           Gosh, if only we could find Kat a boyfriend...<>Let me see what I can do."
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./data/dialogues.csv')\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c7c14f3e-c801-4b98-94f1-e4e4f10bc6df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dialogue    83097\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "40b2f353-281b-4f70-8e78-81b5b84837dc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dialogues = df['dialogue'].tolist()\n",
+    "SEP = '<>'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c979d9a1-a4ed-4709-b23f-12875c74ae69",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cleaned_dialogues = []\n",
+    "\n",
+    "for dialogue in dialogues:\n",
+    "    dialogue = dialogue.strip()\n",
+    "    turns = dialogue.split(SEP)\n",
+    "    cleaned_dialogues.append(turns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "837c3945-b696-48c2-8440-6777b5316bad",
+   "metadata": {},
+   "source": [
+    "#### Generate Token IDs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3e5aa5d9-b60e-4738-aead-2139178e0a28",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "token_ids = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9c262685-f523-4ca5-88ae-1ed20607c5df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 83097/83097 [00:25<00:00, 3222.29it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 25.6 s, sys: 248 ms, total: 25.9 s\n",
+      "Wall time: 25.8 s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "for dialogue in tqdm(cleaned_dialogues):\n",
+    "    dialogue_ids = []\n",
+    "    for utterance in dialogue:\n",
+    "        tokens = tokenizer.tokenize(utterance)\n",
+    "        ids = tokenizer.convert_tokens_to_ids(tokens)\n",
+    "        dialogue_ids.append(ids)\n",
+    "    token_ids.append(dialogue_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32655c88-a761-4d6d-9860-da03fec6c4f1",
+   "metadata": {},
+   "source": [
+    "#### Generate Token Type IDs and Labels "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "468e3dc1-2b7d-40fd-aab1-13a6d38a9f6e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "bos_id = vocab['<|startoftext|>']\n",
+    "eos_id = vocab['<|endoftext|>']\n",
+    "speaker_1_id = vocab['<|speaker-1|>']\n",
+    "speaker_2_id = vocab['<|speaker-2|>']\n",
+    "mask = vocab['<|mask|>']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "94567a9d-236b-4887-97a8-acbb2ad7eb8a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 83097/83097 [00:00<00:00, 126471.45it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dialogues_with_speaker_ids = []\n",
+    "\n",
+    "for dialogue in tqdm(token_ids):\n",
+    "    utterances_with_speaker_ids = []\n",
+    "    for i, utterance in enumerate(dialogue):\n",
+    "        if i%2 == 0:\n",
+    "            utterances_with_speaker_ids.append([speaker_1_id] + utterance)  # Speaker 1: User\n",
+    "        else:\n",
+    "            utterances_with_speaker_ids.append([speaker_2_id] + utterance)  # Speaker 2: Bot\n",
+    "            \n",
+    "    dialogues_with_speaker_ids.append(utterances_with_speaker_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "008eb94f-cfe7-415c-9c78-d2e016dc196c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 83097/83097 [00:00<00:00, 115697.73it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_ids = []\n",
+    "for dialogue in tqdm(dialogues_with_speaker_ids):\n",
+    "    n = len(dialogue)\n",
+    "    for i in range(2, n+1, 2):\n",
+    "        turn = dialogue[:i]\n",
+    "        input_ids.append([bos_id] + list(chain.from_iterable(turn)) + [eos_id])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c8b61e4-3417-4fb5-8882-79b4b12e2b6d",
+   "metadata": {},
+   "source": [
+    "##### Generate Token Type IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dcc932bc-0d38-40dc-a49f-3144cdea15fe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 138135/138135 [00:01<00:00, 88000.30it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "token_type_ids = []\n",
+    "\n",
+    "for turn in tqdm(input_ids):\n",
+    "    turn_token_type_ids = []\n",
+    "    type_id = speaker_1_id\n",
+    "    for token in turn:\n",
+    "        if token == speaker_1_id:\n",
+    "            type_id = speaker_1_id\n",
+    "            turn_token_type_ids.append(type_id)\n",
+    "        elif token == speaker_2_id:\n",
+    "            type_id = speaker_2_id\n",
+    "            turn_token_type_ids.append(type_id)\n",
+    "        else:\n",
+    "            turn_token_type_ids.append(type_id) \n",
+    "            \n",
+    "    token_type_ids.append(turn_token_type_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b756e28a-e78c-4a9e-8505-85bbef32785b",
+   "metadata": {},
+   "source": [
+    "##### Generate Labels "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2415eb8c-013a-4fc9-b49a-32fc0ec5dd64",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def mask_except_reply(turn, speaker_2_id):\n",
+    "    last_index = -1\n",
+    "    for i in range(len(turn) - 1, -1, -1):\n",
+    "        if turn[i] == speaker_2_id:\n",
+    "            last_index = i\n",
+    "            break\n",
+    "    for i in range(last_index):\n",
+    "        turn[i] = mask\n",
+    "    return turn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5e896bfb-f27b-4bac-b375-90724d71d055",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 138135/138135 [00:00<00:00, 309660.57it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = []\n",
+    "\n",
+    "for turn in tqdm(input_ids):\n",
+    "    turn_labels = mask_except_reply(turn, speaker_2_id)\n",
+    "    labels.append(turn_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bf1602b-2818-4dfd-a1a6-85eb647baa3a",
+   "metadata": {},
+   "source": [
+    "#### Pad data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b55713f0-0747-4b50-90c1-07f244a15e56",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "input_ids_tensor = []\n",
+    "\n",
+    "for input_id_turn in input_ids:\n",
+    "    input_ids_tensor.append(torch.LongTensor(input_id_turn))\n",
+    "input_ids_tensor = torch.nn.utils.rnn.pad_sequence(input_ids_tensor, batch_first=True, padding_value=eos_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ed040303-788e-44a7-89e2-514963d399e6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "token_type_ids_tensor = []\n",
+    "\n",
+    "for token_type_id_turn in token_type_ids:\n",
+    "    token_type_ids_tensor.append(torch.LongTensor(token_type_id_turn))\n",
+    "token_type_ids_tensor = torch.nn.utils.rnn.pad_sequence(token_type_ids_tensor, batch_first=True, padding_value=eos_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "51eb3d4e-cb2d-4432-897c-588837e708e3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "labels_tensor = []\n",
+    "\n",
+    "for label_turn in labels:\n",
+    "    labels_tensor.append(torch.LongTensor(label_turn))\n",
+    "labels_tensor = torch.nn.utils.rnn.pad_sequence(labels_tensor, batch_first=True, padding_value=mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c8c4a983-2149-4f02-ba9a-c05c1d21a96e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Input IDs shape: torch.Size([138135, 1579])\n",
+      "Token Type IDs shape: torch.Size([138135, 1579])\n",
+      "Labels shape: torch.Size([138135, 1579])\n"
+     ]
+    }
+   ],
+   "source": [
+    "logger.info(f'Input IDs shape: {input_ids_tensor.shape}')\n",
+    "logger.info(f'Token Type IDs shape: {token_type_ids_tensor.shape}')\n",
+    "logger.info(f'Labels shape: {labels_tensor.shape}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1225c9dd-affc-4dbb-9745-6af849d93c43",
+   "metadata": {},
+   "source": [
+    "#### Create HuggingFace dataset and split data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "47edfbfb-f392-498c-b691-5dcb3802598b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HF dataset: Dataset({\n",
+      "    features: ['input_ids', 'token_type_ids', 'labels'],\n",
+      "    num_rows: 138135\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_dict = {'input_ids': input_ids_tensor, \n",
+    "             'token_type_ids': token_type_ids_tensor, \n",
+    "             'labels': labels_tensor}\n",
+    "hf_dataset = datasets.Dataset.from_dict(data_dict)\n",
+    "logger.info(f'HF dataset: {hf_dataset}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40d307cd-95c6-4924-8908-85aee3ec41eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,7 +735,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b2f353-281b-4f70-8e78-81b5b84837dc",
+   "id": "0ed6f60b-07c9-40fd-a086-f2f6c9408b20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa5ac7e8-77a9-4647-a510-09b6d89b1e16",
    "metadata": {},
    "outputs": [],
    "source": []
