--- a/01-prepare/01-prepare.ipynb
+++ b/01-prepare/01-prepare.ipynb
@@ -43,6 +43,7 @@
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
+    "from datasets import DatasetDict\n",
     "from itertools import chain\n",
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
@@ -122,7 +123,7 @@
    "id": "6bd54762-27d8-4b07-8b33-486eafdb04c0",
    "metadata": {},
    "source": [
-    "#### Load GPT2 tokenizer "
+    "#### Load GPT-Neo tokenizer "
    ]
   },
   {
@@ -135,12 +136,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPT2TokenizerFast(name_or_path='EleutherAI/gpt-j-6B', vocab_size=50257, model_max_length=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True)})\n"
+      "Downloading (…)okenizer_config.json: 100%|██████████| 560/560 [00:00<00:00, 78.9kB/s]\n",
+      "Downloading (…)lve/main/config.json: 100%|██████████| 1.01k/1.01k [00:00<00:00, 143kB/s]\n",
+      "Downloading (…)olve/main/vocab.json: 100%|██████████| 899k/899k [00:00<00:00, 83.0MB/s]\n",
+      "Downloading (…)olve/main/merges.txt: 100%|██████████| 456k/456k [00:00<00:00, 52.8MB/s]\n",
+      "Downloading (…)cial_tokens_map.json: 100%|██████████| 357/357 [00:00<00:00, 159kB/s]\n",
+      "GPT2TokenizerFast(name_or_path='EleutherAI/gpt-neo-125M', vocab_size=50257, model_max_length=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True)})\n"
      ]
     }
    ],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained('EleutherAI/gpt-j-6B')\n",
+    "tokenizer = AutoTokenizer.from_pretrained('EleutherAI/gpt-neo-125M')\n",
     "logger.info(tokenizer)"
    ]
   },
@@ -153,7 +159,7 @@
     {
      "data": {
       "text/plain": [
-       "50400"
+       "50257"
       ]
      },
      "execution_count": 8,
@@ -200,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "50405"
+       "50262"
       ]
      },
      "execution_count": 10,
@@ -226,7 +232,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPT2TokenizerFast(name_or_path='EleutherAI/gpt-j-6B', vocab_size=50257, model_max_length=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<|startoftext|>', 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'additional_special_tokens': ['<|speaker-1|>', '<|speaker-2|>', '<|pad|>', '<|mask|>']})\n"
+      "GPT2TokenizerFast(name_or_path='EleutherAI/gpt-neo-125M', vocab_size=50257, model_max_length=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<|startoftext|>', 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'additional_special_tokens': ['<|speaker-1|>', '<|speaker-2|>', '<|pad|>', '<|mask|>']})\n"
      ]
     }
    ],
@@ -404,15 +410,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83097/83097 [00:25<00:00, 3222.29it/s]"
+      "100%|██████████| 83097/83097 [00:25<00:00, 3304.30it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 25.6 s, sys: 248 ms, total: 25.9 s\n",
-      "Wall time: 25.8 s\n"
+      "CPU times: user 25 s, sys: 168 ms, total: 25.2 s\n",
+      "Wall time: 25.2 s\n"
      ]
     },
     {
@@ -471,7 +477,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83097/83097 [00:00<00:00, 126471.45it/s]\n"
+      "100%|██████████| 83097/83097 [00:00<00:00, 129592.49it/s]\n"
      ]
     }
    ],
@@ -501,7 +507,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83097/83097 [00:00<00:00, 115697.73it/s]\n"
+      "100%|██████████| 83097/83097 [00:00<00:00, 121147.62it/s]\n"
      ]
     }
    ],
@@ -534,7 +540,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 138135/138135 [00:01<00:00, 88000.30it/s]\n"
+      "100%|██████████| 138135/138135 [00:01<00:00, 90155.47it/s]\n"
      ]
     }
    ],
@@ -597,7 +603,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 138135/138135 [00:00<00:00, 309660.57it/s]\n"
+      "100%|██████████| 138135/138135 [00:00<00:00, 318535.03it/s]\n"
      ]
     }
    ],
@@ -725,25 +731,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40d307cd-95c6-4924-8908-85aee3ec41eb",
+   "cell_type": "markdown",
+   "id": "82ca4678-bc39-4fce-85f7-bc4d1684b0a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Split dataset "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "0ed6f60b-07c9-40fd-a086-f2f6c9408b20",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Data splits: DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['input_ids', 'token_type_ids', 'labels'],\n",
+      "        num_rows: 124321\n",
+      "    })\n",
+      "    validation: Dataset({\n",
+      "        features: ['input_ids', 'token_type_ids', 'labels'],\n",
+      "        num_rows: 13814\n",
+      "    })\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_validation_test = hf_dataset.train_test_split(shuffle=True, seed=123, test_size=0.1)\n",
+    "data_splits = DatasetDict({'train': train_validation_test['train'],  \n",
+    "                           'validation': train_validation_test['test']})\n",
+    "logger.info(f'Data splits: {data_splits}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d76961a6-38d9-4c87-9259-54f714da0307",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Save data splits to disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7c202607-b252-4228-9b07-af04af2b1723",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Flattening the indices: 100%|██████████| 125/125 [00:12<00:00, 10.32ba/s]\n",
+      "Flattening the indices: 100%|██████████| 14/14 [00:01<00:00,  9.95ba/s]                          \n",
+      "                                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "data_splits.save_to_disk('./data/tokenized')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa5ac7e8-77a9-4647-a510-09b6d89b1e16",
+   "id": "9c301558-0011-4059-8237-1bf6da4dfc9f",
    "metadata": {},
    "outputs": [],
    "source": []
