--- a/02-train/01-finetune.ipynb
+++ b/02-train/01-finetune.ipynb
@@ -14,7 +14,14 @@
    "id": "34ac3e04-fdd4-4328-9076-d109fd4c8a28",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%capture \n",
+    "\n",
+    "!pip install torch==1.12.1+cu113\n",
+    "!pip install transformers==4.21.0\n",
+    "!pip install datasets==2.9.0\n",
+    "!pip install wandb==0.13.10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -26,43 +33,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2d1f2c96-b268-413d-b119-601e47fbe31c",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "from transformers import AutoModelForCausalLM\n",
+    "from transformers import TrainingArguments\n",
+    "from transformers import AutoTokenizer\n",
+    "from datasets import load_from_disk\n",
+    "from transformers import Trainer\n",
+    "import transformers \n",
+    "import datasets \n",
+    "import logging\n",
+    "import torch\n",
+    "import wandb\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "9349fb86-f117-4243-bc94-071f5c751749",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19a314b4-22f3-476a-8f09-8b7072ddfd6b",
+   "metadata": {},
+   "source": [
+    "##### Setup logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10032c8c-1496-4419-a73d-c70892cd615f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_columns', None)"
+    "logger = logging.getLogger('sagemaker')\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "logger.addHandler(logging.StreamHandler())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcb49871-d587-4325-b4b2-46532fc63bfa",
+   "metadata": {},
+   "source": [
+    "##### Log versions of dependencies "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75a9087b-0933-4315-8f45-90244714edc3",
-   "metadata": {},
+   "id": "c4b6cc81-08e1-4176-a021-4c29ffb17bc2",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "logger.info(f'[Using transformers version: {transformers.__version__}]')\n",
+    "logger.info(f'[Using datasets version: {datasets.__version__}]')\n",
+    "logger.info(f'[Using torch version: {torch.__version__}]')\n",
+    "logger.info(f'[Using wandb version: {wandb.__version__}]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81e38d00-562b-40bb-8624-e2dfdad4694c",
+   "metadata": {},
+   "source": [
+    "##### Setup wandb logging"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e25e9ee0-ad2d-4f5e-95b9-ee4ee36af3e8",
-   "metadata": {},
+   "id": "7c36ff70-582b-4693-ac9a-a0c08f7fbe86",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
+   "source": [
+    "!wandb login 8489739d838b89d2f424147f354f9db40517c1c9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edc2f2d8-ef32-475e-a2af-c102bafb5e2f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path = os.path.abspath('01-finetune.ipynb')\n",
+    "os.environ['WANDB_NOTEBOOK_NAME'] = path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb8f4ccc-6e8e-4e66-80f9-06d78ab54e6d",
+   "metadata": {},
    "source": [
     "#### Load dataset"
    ]
@@ -71,6 +155,236 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "04752875-561c-4c43-90d6-74c14cf96233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "\n",
+    "dataset = load_from_disk('./../01-prepare/data/tokenized')\n",
+    "logger.info(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e8dd262-5278-4919-acc8-85364c15b84b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def custom_data_collator(batch):\n",
+    "    # batch size for data collation = per_device_train_batch_size * number of GPUs\n",
+    "    input_ids = torch.stack([torch.LongTensor(example['input_ids']) for example in batch])\n",
+    "    attention_mask = torch.stack([torch.LongTensor(example['token_type_ids']) for example in batch])\n",
+    "    labels = torch.stack([torch.LongTensor(example['labels']) for example in batch])\n",
+    "    return {'input_ids': input_ids, 'token_type_ids': attention_mask, 'labels': labels}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5a8b03f-7657-435f-91c7-94f94e2bfbcc",
+   "metadata": {},
+   "source": [
+    "#### Load GPT-Neo Tokenizer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99a9aaf2-a33d-4af2-a334-ab02a8481127",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained('EleutherAI/gpt-neo-125M')\n",
+    "logger.info(tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129d19db-5b58-444b-8d92-8da8bda7fba5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "special_tokens = {\n",
+    "    'bos_token': '<|startoftext|>',\n",
+    "    'additional_special_tokens': ['<|speaker-1|>', '<|speaker-2|>', '<|pad|>', '<|mask|>']\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5233d54e-147a-42fc-91f8-447167eefa92",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "_ = tokenizer.add_special_tokens(special_tokens)\n",
+    "vocab = tokenizer.get_vocab()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7539be46-d3b2-462d-96c7-b7fbe80ba1f6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "logger.info(tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a450aa0-22a0-4b9c-9881-1cff7c520889",
+   "metadata": {},
+   "source": [
+    "#### Load GPT-Neo model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c420136-107e-423c-bf87-01f8cf8023f4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained('EleutherAI/gpt-neo-125M')\n",
+    "model.resize_token_embeddings(len(vocab))\n",
+    "device = torch.device('cuda')\n",
+    "model.to(device)\n",
+    "logger.info(next(model.parameters()).device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fbb8f11-2fba-4e14-bf75-814456e06381",
+   "metadata": {},
+   "source": [
+    "#### Setup training config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de0dc62c-65b0-4d0f-8b73-36712c2b8048",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "TRAIN_EPOCHS = 2\n",
+    "TRAIN_BATCH_SIZE = 4\n",
+    "EVAL_BATCH_SIZE = 4\n",
+    "LOGGING_STEPS = 64\n",
+    "SAVE_STEPS = 10240  # Reduce it to a smaler value like 512 if you want to save checkpoints\n",
+    "SAVE_TOTAL_LIMIT = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40228f8b-26f0-45c0-bb02-c0cbccbee3b1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "training_args = TrainingArguments(output_dir='./model', \n",
+    "                                  overwrite_output_dir=True, \n",
+    "                                  num_train_epochs=TRAIN_EPOCHS,  \n",
+    "                                  optim='adamw_torch', \n",
+    "                                  save_strategy='steps', \n",
+    "                                  evaluation_strategy='epoch',\n",
+    "                                  per_device_train_batch_size=TRAIN_BATCH_SIZE, \n",
+    "                                  per_device_eval_batch_size=EVAL_BATCH_SIZE, \n",
+    "                                  warmup_steps=10, \n",
+    "                                  weight_decay=0.1,\n",
+    "                                  logging_steps=LOGGING_STEPS,\n",
+    "                                  save_steps=SAVE_STEPS, \n",
+    "                                  save_total_limit=SAVE_TOTAL_LIMIT,\n",
+    "                                  report_to='wandb',\n",
+    "                                  logging_dir='logs')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e291a271-7217-424f-9515-49ead59393dc",
+   "metadata": {},
+   "source": [
+    "#### Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6d0e64c-19fa-4d5b-8628-1fbf9dc38146",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "trainer = Trainer(model=model, \n",
+    "                  args=training_args, \n",
+    "                  train_dataset=dataset['train'], \n",
+    "                  eval_dataset=dataset['validation'], \n",
+    "                  data_collator=custom_data_collator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8111307-2212-41e4-bf10-50c1cdc3b135",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c31572a-e4ec-4502-bce9-1d1c225460bf",
+   "metadata": {},
+   "source": [
+    "#### Save model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eedfffd-9bf6-4f35-bc39-9d7d7b061e7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cc2cd96-31a8-4f81-8c27-e2ca2dfee7c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "541cbe73-4a8f-4851-a5bb-83f00f2a7376",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -565,11 +879,11 @@
     "vcpuNum": 192
    }
   ],
-  "instance_type": "ml.g4dn.xlarge",
+  "instance_type": "ml.p3dn.24xlarge",
   "kernelspec": {
-   "display_name": "Python 3 (PyTorch 1.12 Python 3.8 GPU Optimized)",
+   "display_name": "Python 3 (PyTorch 1.13 Python 3.9 GPU Optimized)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/pytorch-1.12-gpu-py38"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/pytorch-1.13-gpu-py39"
   },
   "language_info": {
    "codemirror_mode": {
@@ -581,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
